<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:includeFontPadding="false"
        android:text="@string/username_or_email"
        android:textColor="@color/colorLightBlack"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toTopOf="@+id/glName" />

    <com.cartrack.assignment.ui.custom.TouchEditText
        android:id="@+id/editName"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:imeOptions="actionDone"
        android:includeFontPadding="false"
        android:inputType="textNoSuggestions"
        android:singleLine="true"
        android:textColor="@color/colorBlack"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameLabel"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.889"
        tools:text="Name" />

    <View
        android:id="@+id/viewUnderLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorLightBlack"
        app:layout_constraintEnd_toEndOf="@+id/editName"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:includeFontPadding="false"
        android:text="@string/password"
        android:textColor="@color/colorLightBlack"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/viewUnderLine" />

    <com.cartrack.assignment.ui.custom.TouchEditText
        android:id="@+id/editPassword"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:imeOptions="actionDone"
        android:includeFontPadding="false"
        android:inputType="textNoSuggestions|textPassword"
        android:singleLine="true"
        android:textColor="@color/colorBlack"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/viewEyes"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/tvPasswordLabel"
        tools:text="Password" />

    <View
        android:id="@+id/viewPasswordUnderLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorLightBlack"
        app:layout_constraintEnd_toEndOf="@+id/editName"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgAlphanumeric"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/bg_oval_enable_behavior"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/viewPasswordUnderLine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAlphanumeric"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:enabled="false"
        android:includeFontPadding="false"
        android:text="@string/alphanumeric"
        android:textColor="@color/login_text_behavior"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgAlphanumeric"
        app:layout_constraintStart_toEndOf="@+id/imgAlphanumeric"
        app:layout_constraintTop_toTopOf="@+id/imgAlphanumeric" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img8char"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/bg_oval_enable_behavior"
        android:enabled="false"
        app:layout_constraintStart_toStartOf="@+id/imgAlphanumeric"
        app:layout_constraintTop_toBottomOf="@+id/imgAlphanumeric" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv8char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:enabled="false"
        android:includeFontPadding="false"
        android:text="@string/eight_characters_minimum"
        android:textColor="@color/login_text_behavior"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/img8char"
        app:layout_constraintStart_toEndOf="@+id/img8char"
        app:layout_constraintTop_toTopOf="@+id/img8char" />

    <com.cartrack.assignment.ui.custom.TouchImageView
        android:id="@+id/imgEyes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editPassword"
        app:layout_constraintEnd_toEndOf="@+id/editName"
        app:layout_constraintTop_toTopOf="@+id/editPassword"
        app:srcCompat="@drawable/ic_eye_open" />

    <com.cartrack.assignment.ui.custom.TouchView
        android:id="@+id/viewEyes"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgEyes"
        app:layout_constraintEnd_toEndOf="@+id/imgEyes"
        app:layout_constraintStart_toStartOf="@+id/imgEyes"
        app:layout_constraintTop_toTopOf="@+id/imgEyes" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCountryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:includeFontPadding="false"
        android:text="@string/country"
        android:textColor="@color/colorLightBlack"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/tv8char" />

    <com.cartrack.assignment.ui.custom.TouchImageView
        android:id="@+id/imgArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/editCountry"
        app:layout_constraintEnd_toEndOf="@+id/editCountry"
        app:layout_constraintTop_toTopOf="@+id/editCountry"
        app:srcCompat="@drawable/ic_dropdown" />

    <com.cartrack.assignment.ui.custom.TouchEditText
        android:id="@+id/editCountry"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:background="@null"
        android:cursorVisible="false"
        android:focusable="false"
        android:gravity="center_vertical"
        android:imeOptions="actionDone"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:textColor="@color/colorBlack"
        android:textCursorDrawable="@drawable/edit_cursor_color"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editName"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/tvCountryLabel"
        tools:text="Country" />

    <View
        android:id="@+id/viewCountryUnderLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorLightBlack"
        app:layout_constraintEnd_toEndOf="@+id/editName"
        app:layout_constraintStart_toStartOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/editCountry" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/one_or_more_of_the_above_information_is_incorrect"
        android:textColor="@color/colorRed"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/editCountry"
        app:layout_constraintTop_toBottomOf="@+id/viewCountryUnderLine"
        tools:visibility="visible" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/laDrivingCart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:0.272"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/driving_car" />

    <com.cartrack.assignment.ui.custom.TouchTextView
        android:id="@+id/tvLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_login_button_behavior"
        android:enabled="false"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:includeFontPadding="false"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:text="@string/login"
        android:textColor="@color/login_text_behavior"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/editName"
        app:layout_constraintTop_toBottomOf="@+id/viewCountryUnderLine"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.35" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/cpbLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:indeterminateTint="@color/colorDarkGary"
        android:theme="@style/AppTheme.ContentLoadingProgress"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <View
        android:id="@+id/viewLoading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />
</androidx.constraintlayout.widget.ConstraintLayout>